--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,12 @@ opentelemetry-instrumentation-fastapi = "^0.46b0"
 cryptography = "^43.0.0"
 pendulum = "^3.0.0"
 orjson = "^3.10.0"
+numpy = "^2.1.0"
+opencv-python-headless = "^4.10.0.84"
+Pillow = "^10.4.0"
+pytesseract = "^0.3.10"
+python-Levenshtein = "^0.25.1"
+Unidecode = "^1.3.8"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
