Refactor OCR service configuration in docker-compose, renaming ocr-mock to ocr-worker and updating dependencies. Enhance README with OCR worker setup instructions and environment variable configurations. Update Telegram flow documentation to reflect changes in user interaction and backend processing. Introduce new Portmone integration settings in config and bonus model adjustments for improved payout handling.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,14 +41,22 @@ services:
       - "9000:9000"
       - "9001:9001"
 
-  ocr-mock:
+  ocr-worker:
     build:
       context: .
-      dockerfile: services/ocr_mock/Dockerfile
+      dockerfile: services/ocr_worker/Dockerfile
+    depends_on:
+      - postgres
+      - rabbitmq
+      - minio
     environment:
-      PORT: 8081
-    ports:
-      - "8081:8081"
+      TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN:-dummy-token}
+      ENCRYPTION_SECRET: ${ENCRYPTION_SECRET:-dummy-secret}
+      POSTGRES_HOST: postgres
+      RABBITMQ_HOST: rabbitmq
+      STORAGE_ENDPOINT: http://minio:9000
+      STORAGE_ACCESS_KEY: ${STORAGE_ACCESS_KEY:-miniokey}
+      STORAGE_SECRET_KEY: ${STORAGE_SECRET_KEY:-miniopass}
 
   easypay-mock:
     build:
