Add Portmone mock service to docker-compose and enhance Telegram bot onboarding messages
- Introduced a new service `portmone-mock` in docker-compose for local development.
- Updated onboarding messages in the Telegram bot to include personalized greetings and improved user interaction.
- Added localization support for new greeting messages in both Ukrainian and Russian language files.
- Refactored onboarding text function to accommodate user names in greetings.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,15 @@ services:
     ports:
       - "8080:8080"
 
+  portmone-mock:
+    build:
+      context: .
+      dockerfile: services/portmone_mock/Dockerfile
+    environment:
+      PORT: 8082
+    ports:
+      - "8082:8082"
+
 volumes:
   postgres_data:
   minio_data:
