Add API Gateway URL to configuration and update Telegram bot to use it
- Added API_GATEWAY_URL to env.example and AppSettings for better configuration management.
- Updated ReceiptApiClient initialization in the Telegram bot to utilize the new API Gateway URL.
- Enhanced error handling in the /start command to log issues and provide user feedback in case of connection errors.

--- a/env.example
+++ b/env.example
@@ -2,6 +2,8 @@
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 TELEGRAM_WEBHOOK_URL=
 TELEGRAM_ADMIN_IDS=
+# API Gateway URL (used by telegram bot to connect to API)
+API_GATEWAY_URL=http://localhost:8000
 
 # Database (PostgreSQL)
 POSTGRES_HOST=localhost
