--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ mypy = "^1.11.0"
 types-redis = "^4.6.0"
 types-pytz = "^2024.1"
 fakeredis = "^2.23.0"
+aiosqlite = "^0.20.0"
 
 [tool.poetry.scripts]
 telegram-bot = "apps.telegram_bot.main:run"
