Enhance Darnitsa prefix detection and improve Tesseract error handling
- Introduced a new function to check for Darnitsa keywords appearing after separators, improving detection accuracy in product names.
- Updated the OCR processing script to verify the presence of Tesseract before execution, providing detailed installation instructions if not found.
- Enhanced logging for Tesseract path detection, including common installation paths for both Windows and Unix-like systems.
- Refactored tests to cover new scenarios for Darnitsa prefix detection, ensuring comprehensive validation of the functionality.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,7 +68,7 @@ known-first-party = ["apps", "libs", "services"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
-addopts = "-ra -q --maxfail=1 --cov=."
+addopts = "-ra -q --maxfail=1"
 
 [tool.mypy]
 plugins = ["pydantic.mypy"]
