--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,9 @@ Pillow = "^11.0.0"
 pytesseract = "^0.3.10"
 python-Levenshtein = "^0.27.0"
 Unidecode = "^1.3.8"
+qreader = "^0.4.0"
+beautifulsoup4 = "^4.12.3"
+lxml = "^5.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
