--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ Pillow = "^11.0.0"
 pytesseract = "^0.3.10"
 python-Levenshtein = "^0.27.0"
 Unidecode = "^1.3.8"
-qreader = "^0.4.0"
+qreader = ">=1.0.0,<4.0.0"
 beautifulsoup4 = "^4.12.3"
 lxml = "^5.3.0"
 
