Update .gitignore, .slugignore, and pyproject.toml; remove qr_result.txt
- Added 'venv/' to .gitignore to exclude virtual environment directories.
- Updated .slugignore to exclude image files and specific script files, improving deployment efficiency.
- Removed `beautifulsoup4` and `lxml` dependencies from pyproject.toml to streamline project dependencies.
- Deleted obsolete qr_result.txt file to clean up the repository.

--- a/.slugignore
+++ b/.slugignore
@@ -19,4 +19,11 @@ services/ocr_worker/Dockerfile
 services/easypay_mock/
 services/portmone_mock/
 services/ocr_mock/
+*.jpg
+*.jpeg
+*.png
+scripts/
+cabinet_main.js
+receipt_page.html
+runtime-es2015.js
 
