--- a/requirements-cpu.txt
+++ b/requirements-cpu.txt
@@ -1,4 +1,5 @@
-# Production dependencies
+# Production dependencies with CPU-only PyTorch
+# Install with: pip install -r requirements-cpu.txt --extra-index-url https://download.pytorch.org/whl/cpu
 fastapi>=0.121.1,<0.122.0
 uvicorn[standard]>=0.33.0,<0.34.0
 aiogram>=3.13.1,<4.0.0
@@ -10,8 +11,7 @@ asyncpg>=0.31.0,<0.32.0
 httpx>=0.28.1,<0.29.0
 python-dotenv>=1.0.1,<2.0.0
 numpy>=2.1.0,<3.0.0
-# PyTorch (install CPU version with: pip install torch --index-url https://download.pytorch.org/whl/cpu)
-# Or use requirements-cpu.txt for automatic CPU installation
+# CPU-only PyTorch (install with --extra-index-url https://download.pytorch.org/whl/cpu)
 torch>=2.0.0,<3.0.0
 qreader>=3.0.0,<4.0.0
 Pillow>=10.0.0,<11.0.0
