--- a/requirements-cpu.txt
+++ b/requirements-cpu.txt
@@ -15,4 +15,6 @@ numpy>=2.1.0,<3.0.0
 torch>=2.0.0,<3.0.0
 qreader>=3.0.0,<4.0.0
 Pillow>=10.0.0,<11.0.0
-
+tenacity>=8.3.0,<9.0.0
+pendulum>=3.0.0,<4.0.0
+Unidecode>=1.3.8,<2.0.0
