Remove obsolete installation scripts and HTML files; update requirements
- Deleted `install-cpu.bat`, `install-cpu.sh`, `INSTALL.md`, and `receipt_page.html` as they are no longer needed.
- Updated `requirements.txt` to comment out the `qreader` dependency and add `imageio` for improved image processing capabilities.
- Cleaned up test files and directories to streamline the project structure.

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,5 @@ asyncpg>=0.31.0,<0.32.0
 httpx>=0.28.1,<0.29.0
 python-dotenv>=1.0.1,<2.0.0
 numpy>=2.1.0,<3.0.0
-qreader>=3.0.0,<4.0.0
+#qreader>=3.0.0,<4.0.0
+imageio>=2.31.0,<3.0.0
