--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,6 @@ asyncpg>=0.31.0,<0.32.0
 httpx>=0.28.1,<0.29.0
 python-dotenv>=1.0.1,<2.0.0
 numpy>=2.1.0,<3.0.0
-#qreader>=3.0.0,<4.0.0
+pyzbar>=0.1.9,<0.2.0
+Pillow>=10.0.0,<11.0.0
 imageio>=2.31.0,<3.0.0
