--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # Production dependencies
 fastapi>=0.121.1,<0.122.0
+python-multipart>=0.0.6,<1.0.0
 uvicorn[standard]>=0.33.0,<0.34.0
 aiogram>=3.13.1,<4.0.0
 pydantic>=2.10.4,<3.0.0
