--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,4 @@ imageio>=2.31.0,<3.0.0
 unidecode>=1.3.8,<2.0.0
 selenium>=4.0.0,<5.0.0
 webdriver-manager>=4.0.0,<5.0.0
+chromedriver-autoinstaller>=0.6.4,<1.0.0
